refactor: simplify two factor enabled logic
